--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
   "authors": [
     "Bengt Weiße <bengtler@gmail.com>"
   ],
-  "description": "Angular and Ionic Framework extension. It provides the ionProcessSpinner to show a loading spinner until a process has finished. It replaces the child content with a loading spinner while processing.",
+  "description": "Angular and Ionic Framework extension. It provides the ionProcessSpinner directive to show a loading spinner until a process has finished. It replaces the child content with a loading spinner while processing.",
   "main": ["src/ionic-process-spinner.min.js"],
   "ignore": [
     "bower_components",
